# SOC-Triage-Gym

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEMO_RUNBOOK.md  DESIGN_ARCHITECTURE.md  Dockerfile  JUDGES_START_HERE.md  Makefile  README.md  STAGE_SCRIPT.md  TALK_PLAN.md  benchmark.py  cli.py  client.py  demo.py  demo_live.py  docker-compose.yml  inference.py  models.py  pyproject.toml  train_grpo.py
.github/: dependabot.yml
.github/workflows/: ci.yml
actors/: __init__.py  compliance.py  end_user.py  registry.py  threat_intel.py
data/: mitre_attack.py
docs/: PRODUCTION.md  TRAINING.md
graders/: __init__.py  apt_campaign_grader.py  base.py  expert_panel.py  insider_threat_grader.py  lateral_movement_grader.py  manager_judge.py  phishing_grader.py  queue_management_grader.py  red_team_grader.py  team_grader.py  token_scaled_reward.py
scenarios/: __init__.py  apt_campaign.py  base.py  insider_threat.py  lateral_movement.py  phishing.py  policy_drift.py  queue_management.py  red_team_generator.py  team_lateral_team.py  team_phishing_escalation.py
scripts/: finalize_outputs.py  gen_plots.py  gen_readme_assets.py  replay.py  reward_integrity_audit.py  train_and_evaluate.py
server/: app.py  audit.py  environment.py  metrics.py  page_ui.py  requirements.txt  security.py  sessions.py
site/: classic.html  cues.html  index.html
tests/: conftest.py  test_environment.py  test_graders.py  test_production.py  test_readme_assets.py  test_scenarios.py  test_server.py  test_team_mode.py  test_themes_coverage.py  test_training.py
tools/: __init__.py  asset_lookup.py  containment.py  correlation.py  enrichment.py  log_query.py  oversight.py  render_text_pdf.py  ticketing.py  user_lookup.py
training/: __init__.py  callbacks.py  curriculum.py  evaluation.py  rewards.py  run_manager.py
