[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "soc-triage-gym"
version = "0.1.0"
description = "A reinforcement learning environment simulating a Security Operations Center (SOC) analyst workflow"
requires-python = ">=3.11"
authors = [
    {name = "SOC-Triage-Gym Team"}
]
license = {text = "MIT"}
keywords = ["reinforcement-learning", "cybersecurity", "soc", "openenv", "siem", "mitre-attack"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.32",
    "openenv-core>=0.2.0",
    "fastmcp>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"
soc-triage-gym = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
