[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-triage-gym"
version = "0.3.0"
description = "A reinforcement learning environment simulating a Security Operations Center (SOC) analyst workflow"
requires-python = ">=3.11"
authors = [
    {name = "SOC-Triage-Gym Team"}
]
license = {text = "MIT"}
keywords = ["reinforcement-learning", "cybersecurity", "soc", "openenv", "siem", "mitre-attack"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.32",
    "openenv-core>=0.2.0",
    "fastmcp>=3.2.0",
    # Transitive floors carried for security fixes (see server/requirements.txt):
    # mcp via fastmcp, pillow via openenv-core -> gradio.
    "mcp>=1.28.1",
    "pillow>=12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.6",
]

[project.scripts]
server = "server.app:main"
soc-triage-gym = "server.app:main"
soc-gym = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["*.ipynb", "uv.lock"]

[tool.ruff.lint]
# F = pyflakes (real bugs), I = import sorting, B = bugbear, UP = pyupgrade,
# E/W = pycodestyle. E501 (line length) and E402 (import position) are
# intentionally relaxed: several modules define a module logger before their
# imports, and many data-table lines are legitimately long.
select = ["E", "F", "W", "I", "B", "UP"]
# E501/E402 relaxed (see above). UP042 (str+Enum -> StrEnum) is skipped on
# purpose: these enums are serialised across graders and tests, and StrEnum
# changes str(member) from "Class.NAME" to the value, a behavioural change we
# don't want silently applied.
ignore = ["E501", "E402", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are the intended call-in-default idiom.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.File",
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over strict bugbear/import rules.
"tests/*" = ["B011", "B017", "F841"]
"scripts/*" = ["F841"]
